--- a/QubicRed/Properties/Resources.resx
+++ b/QubicRed/Properties/Resources.resx
@@ -172,4 +172,7 @@
   <data name="_new" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Messenger\new.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="send_disabled" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Messenger\send_disabled.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
