added start menu groups

--- a/QubicRed/Properties/Resources.resx
+++ b/QubicRed/Properties/Resources.resx
@@ -178,4 +178,19 @@
   <data name="BootLoop" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\BootLoop.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="taskbar_apps" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Taskbar\taskbar_apps.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="taskbar_home" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Taskbar\taskbar_home.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="taskbar_power" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Taskbar\taskbar_power.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="taskbar_search" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Taskbar\taskbar_search.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="taskbar_user" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Taskbar\taskbar_user.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
